# Polymarket-Quant

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 回测与评估层-技术规格.md  数据与信号层-技术规格.md  架构设计方案-完善版-v2.md  链上机制与结算-技术规格.md
src/polymarket_quant/: __init__.py
src/polymarket_quant/backtest/: __init__.py  replay.py
src/polymarket_quant/data/: __init__.py  schemas.py
src/polymarket_quant/data/collectors/: __init__.py  base.py  binance.py  polymarket.py  replay.py
src/polymarket_quant/data/signals/: __init__.py  common.py  fair_value.py  latency_arb.py  liquidity.py  structural.py  wash_filter.py
src/polymarket_quant/infrastructure/: __init__.py  settings.py
src/polymarket_quant/orchestration/: __init__.py  read_only.py
src/polymarket_quant/reasoning/: __init__.py  contracts.py
src/polymarket_quant/risk/: __init__.py  controls.py
src/polymarket_quant/settlement/: __init__.py  read_only.py
tests/: conftest.py  test_filters.py  test_read_only_safety.py  test_replay.py  test_schemas.py  test_signals.py
tests/fixtures/: offline_replay.json
